[package]
name = "ae2d-rust"
version = "0.1.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "ae2d"
path = "src/main.rs"

[[bin]]
name = "envell"
path = "src/envell.rs"

[dependencies]
gl = "*"
glam = "*"
stb_image = "*"
cpal = "*"
json = "*"
rand = "*"

[dependencies.glfw]
version = "*"
default-features = false
features = [ "raw-window-handle-v0-5" ]

[dependencies.mlua]
version = "0.10.3"
features = ["lua54", "vendored"]
