[package]
name = "ae2d-rust"
version = "0.1.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "ae2d"
path = "src/main.rs"

[[bin]]
name = "envell"
path = "src/envell.rs"

[[bin]]
name = "se"
path = "src/skeletons.rs"

[dependencies]
gl = "*"
glam = "*"
stb_image = "*"
cpal = "*"
json = "*"
base64 = "*"
sha1_smol = "*"

[dependencies.glfw]
version = "*"
default-features = false
features = [ "raw-window-handle-v0-5" ]

[dependencies.mlua]
version = "*"
features = ["lua54", "vendored"]