[package]
name = "ae2d-rust"
version = "0.1.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "ae2d"
path = "src/main.rs"

[[bin]]
name = "envell"
path = "src/envell.rs"

[[bin]]
name = "se"
path = "src/skeletons.rs"

[dependencies]
gl = "0.14.0"
glam = "0.29.3"
stb_image = "0.3.0"
cpal = "0.16"
json = "0.12.4"
base64 = "0.22.1"
sha1_smol = "1.0.1"

[dependencies.glfw]
version = "0.59.0"
default-features = false
features = [ "raw-window-handle-v0-5" ]

[dependencies.mlua]
version = "0.10.5"
features = ["lua54", "vendored"]
